<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <POU Name="EL3214" Id="{0ef824af-3384-4b63-9d1f-7d6cf6b0bd23}" SpecialFunc="None">
    <Declaration><![CDATA[//EL3214 | 4-channel analog input terminal, PT100 (RTD)
FUNCTION_BLOCK EL3214

VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
	bError: BOOL;
END_VAR

VAR
	//Channels
	Ch1_Status	AT %I* : WORD;
	Ch2_Status 	AT %I* : WORD;
	Ch3_Status 	AT %I* : WORD;
	Ch4_Status 	AT %I* : WORD;
	
	//Terminal status
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	EL3214_Error : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
* TODO: Status words of the channels
*)

EnO := En;

//Error FB instance
EL3214_Error(
	En					:= TRUE,
	iTerminal_ID		:= iTerminal_ID,
	bWcState			:= WcState_WcState,
	uiInfoData_State	:= InfoData_State,
	pErrorSystem		:= ErrorSystem,
	bError				=> bError,
);]]></ST>
    </Implementation>
    <LineIds Name="EL3214">
      <LineId Id="50" Count="1" />
      <LineId Id="12" Count="0" />
      <LineId Id="54" Count="11" />
    </LineIds>
  </POU>
</TcPlcObject>