<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <POU Name="EL1008" Id="{1c776ddd-5c71-412e-8433-aacbe67877c3}" SpecialFunc="None">
    <Declaration><![CDATA[///EL1008 | 8-channel digital input terminal 24 V DC, 3 ms
FUNCTION_BLOCK EL1008

VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
	bDi_1: BOOL;
	bDi_2: BOOL;
	bDi_3: BOOL;
	bDi_4: BOOL;
	bDi_5: BOOL;
	bDi_6: BOOL;
	bDi_7: BOOL;
	bDi_8: BOOL;
	bError: BOOL;
END_VAR

VAR
	Channel_1_Input AT %I*: BOOL;
	Channel_2_Input AT %I*: BOOL;
	Channel_3_Input AT %I*: BOOL;
	Channel_4_Input AT %I*: BOOL;
	Channel_5_Input AT %I*: BOOL;
	Channel_6_Input AT %I*: BOOL;
	Channel_7_Input AT %I*: BOOL;
	Channel_8_Input AT %I*: BOOL;
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	EL1008_Error : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[EnO:=En;

//Error FB instance
EL1008_Error(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

IF En THEN
	IF bError=FALSE THEN
		bDi_1:=Channel_1_Input;
		bDi_2:=Channel_2_Input;
		bDi_3:=Channel_3_Input;
		bDi_4:=Channel_4_Input;
		bDi_5:=Channel_5_Input;
		bDi_6:=Channel_6_Input;
		bDi_7:=Channel_7_Input;
		bDi_8:=Channel_8_Input;
	ELSE
		bDi_1:=FALSE;
		bDi_2:=FALSE;
		bDi_3:=FALSE;
		bDi_4:=FALSE;
		bDi_5:=FALSE;
		bDi_6:=FALSE;
		bDi_7:=FALSE;
		bDi_8:=FALSE;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="EL1008">
      <LineId Id="3" Count="1" />
      <LineId Id="68" Count="7" />
      <LineId Id="9" Count="21" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>