<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="EL1012" Id="{ce5b0254-0472-4caf-9dae-188a6a2cef3f}" SpecialFunc="None">
    <Declaration><![CDATA[///EL1012 | 2-channel digital input terminal 24 V DC, 10 µs
FUNCTION_BLOCK EL1012

VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
	bDi_1: BOOL;
	bDi_2: BOOL;
	bError: BOOL;
END_VAR

VAR
	Channel_1_Input AT %I*: BOOL;
	Channel_2_Input AT %I*: BOOL;
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;

	//FB-s
	fbTerminalError : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[EnO:=En;

//Error FB instance
fbTerminalError(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

IF En THEN
	IF bError=FALSE THEN
		bDi_1:=Channel_1_Input;
		bDi_2:=Channel_2_Input;
	ELSE
		bDi_1:=FALSE;
		bDi_2:=FALSE;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="EL1012">
      <LineId Id="3" Count="1" />
      <LineId Id="44" Count="9" />
      <LineId Id="11" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>