<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="EL1094" Id="{c168d7d3-cadc-4857-8012-cec2180a7bcc}" SpecialFunc="None">
    <Declaration><![CDATA[///EL1094 | 4-channel digital input terminal 24 V DC, 10 µs, switching to negative potential
FUNCTION_BLOCK EL1094

VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
	bDi_1: BOOL;
	bDi_2: BOOL;
	bDi_3: BOOL;
	bDi_4: BOOL;
	bError: BOOL;
END_VAR

VAR
	Channel_1_Input AT %I*: BOOL;
	Channel_2_Input AT %I*: BOOL;
	Channel_3_Input AT %I*: BOOL;
	Channel_4_Input AT %I*: BOOL;
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	fbTerminalError : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[EnO:=En;

//Error FB instance
fbTerminalError(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

IF En THEN
	IF bError=FALSE THEN
		bDi_1:=Channel_1_Input;
		bDi_2:=Channel_2_Input;
		bDi_3:=Channel_3_Input;
		bDi_4:=Channel_4_Input;
	ELSE
		bDi_1:=FALSE;
		bDi_2:=FALSE;
		bDi_3:=FALSE;
		bDi_4:=FALSE;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="EL1094">
      <LineId Id="3" Count="1" />
      <LineId Id="52" Count="7" />
      <LineId Id="9" Count="13" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>