<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="EL1252" Id="{9414ba14-6645-4599-8459-3b12adb78306}" SpecialFunc="None">
    <Declaration><![CDATA[///EL1252 | XFC, 2-channel digital input terminal with time stamp
FUNCTION_BLOCK EL1252

VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
	bDi_1: BOOL;
	bDi_2: BOOL;
	nDcTimeOnLatchPos_1: ULINT;
	nDcTimeOnLatchNeg_1: ULINT;
	nDcTimeOnLatchPos_2: ULINT;
	nDcTimeOnLatchNeg_2: ULINT;
	bError: BOOL;
END_VAR

VAR
	Channel_1_Input AT %I*: BOOL;
	Channel_2_Input AT %I*: BOOL;
	Latch_LatchPos1 AT %I*: ULINT;
	Latch_LatchNeg1 AT %I*: ULINT;
	Latch_LatchPos2 AT %I*: ULINT;
	Latch_LatchNeg2 AT %I*: ULINT;
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	EL1252_Error : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
*
*
*)

EnO:=En;

//Error FB instance
EL1252_Error(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

IF En THEN
	IF bError=FALSE THEN
		bDi_1:=Channel_1_Input;
		bDi_2:=Channel_2_Input;
		nDcTimeOnLatchPos_1:=Latch_LatchPos1;
		nDcTimeOnLatchNeg_1:=Latch_LatchNeg1;
		nDcTimeOnLatchPos_2:=Latch_LatchPos2;
		nDcTimeOnLatchNeg_2:=Latch_LatchNeg2;
	ELSE
		bDi_1:=FALSE;
		bDi_2:=FALSE;
		nDcTimeOnLatchPos_1:=0;
		nDcTimeOnLatchNeg_1:=0;
		nDcTimeOnLatchPos_2:=0;
		nDcTimeOnLatchNeg_2:=0;
	END_IF
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="EL1252">
      <LineId Id="102" Count="0" />
      <LineId Id="104" Count="2" />
      <LineId Id="103" Count="0" />
      <LineId Id="3" Count="1" />
      <LineId Id="61" Count="7" />
      <LineId Id="9" Count="18" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>