<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.11">
  <POU Name="EL2014" Id="{87ed0f35-77bb-4af3-abb4-bd4457e39e0b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK EL2014
VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT; 
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO : BOOL;
	bError : BOOL;
END_VAR

VAR
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	EL2014_Error : FB_TerminalError;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
* TODO:
* Channel diagnostic variables and device diag variables
*)

EnO:=En;

EL2014_Error(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

]]></ST>
    </Implementation>
    <LineIds Name="EL2014">
      <LineId Id="92" Count="2" />
      <LineId Id="9" Count="0" />
      <LineId Id="41" Count="10" />
      <LineId Id="122" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>