<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="EL2032" Id="{246ebfd8-3ec9-476c-9b1f-49b7848e5eaf}" SpecialFunc="None">
    <Declaration><![CDATA[///EL2032 | 2-channel digital output terminal 24 V DC, 2 A, diagnostics
FUNCTION_BLOCK EL2032

VAR_INPUT
	En: BOOL;
	bDo_1: BOOL;
	bDo_2: BOOL;
	iTerminal_ID : INT;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
	bDiag_1: BOOL;
	bDiag_2: BOOL;
	bError: BOOL;
END_VAR

VAR
	Diag_1_Diag AT %I*: BOOL;
	Diag_2_Diag AT %I*: BOOL;
	Channel_1_Output AT %Q*: BOOL;
	Channel_2_Output AT %Q*: BOOL;
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	fbTerminalError : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[EnO:=En;

//Error FB instance
fbTerminalError(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

IF En THEN
	IF bError=FALSE THEN
		bDiag_1:=Diag_1_Diag;
		bDiag_2:=Diag_2_Diag;
		Channel_1_Output:=bDo_1;
		Channel_2_Output:=bDo_2;
	ELSE
		bDiag_1:=FALSE;
		bDiag_2:=FALSE;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="EL2032">
      <LineId Id="3" Count="1" />
      <LineId Id="42" Count="7" />
      <LineId Id="9" Count="11" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>