<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="EL2808" Id="{b00ba5ad-3961-4dc4-af0e-c716ff06af07}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK EL2808

VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT; 
	bDo_1: BOOL;
	bDo_2: BOOL;
	bDo_3: BOOL;
	bDo_4: BOOL;
	bDo_5: BOOL;
	bDo_6: BOOL;
	bDo_7: BOOL;
	bDo_8: BOOL;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO : BOOL;
	bError : BOOL;
END_VAR

VAR
	Channel_1_Output AT %Q*: BOOL;
	Channel_2_Output AT %Q*: BOOL;
	Channel_3_Output AT %Q*: BOOL;
	Channel_4_Output AT %Q*: BOOL;
	Channel_5_Output AT %Q*: BOOL;
	Channel_6_Output AT %Q*: BOOL;
	Channel_7_Output AT %Q*: BOOL;
	Channel_8_Output AT %Q*: BOOL;
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	fbTerminalError : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[EnO:=En;

fbTerminalError(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

IF En THEN
	IF bError=FALSE THEN
		Channel_1_Output:=bDo_1;
		Channel_2_Output:=bDo_2;
		Channel_3_Output:=bDo_3;
		Channel_4_Output:=bDo_4;
		Channel_5_Output:=bDo_5;
		Channel_6_Output:=bDo_6;
		Channel_7_Output:=bDo_7;
		Channel_8_Output:=bDo_8;
	ELSE
		Channel_1_Output:=FALSE;
		Channel_2_Output:=FALSE;
		Channel_3_Output:=FALSE;
		Channel_4_Output:=FALSE;
		Channel_5_Output:=FALSE;
		Channel_6_Output:=FALSE;
		Channel_7_Output:=FALSE;
		Channel_8_Output:=FALSE;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="EL2808">
      <LineId Id="43" Count="10" />
      <LineId Id="55" Count="19" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>