<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.11">
  <POU Name="EL2819" Id="{f53f1521-ea95-4522-96ee-49d4e6c1f88a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK EL2819
VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT; 
	
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO : BOOL;
	bError : BOOL;
END_VAR

VAR
	Channel_1_Diag		AT %I*	: WORD;
	Channel_2_Diag		AT %I*	: WORD;
	Channel_3_Diag		AT %I*	: WORD;
	Channel_4_Diag		AT %I*	: WORD;
	Channel_5_Diag		AT %I*	: WORD;
	Channel_6_Diag		AT %I*	: WORD;
	Channel_7_Diag		AT %I*	: WORD;
	Channel_8_Diag		AT %I*	: WORD;
	Channel_9_Diag		AT %I*	: WORD;
	Channel_10_Diag		AT %I*	: WORD;
	Channel_11_Diag		AT %I*	: WORD;
	Channel_12_Diag		AT %I*	: WORD;
	Channel_13_Diag		AT %I*	: WORD;
	Channel_14_Diag		AT %I*	: WORD;
	Channel_15_Diag		AT %I*	: WORD;
	Channel_16_Diag		AT %I*	: WORD;
	
	
	
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	EL2819_Error : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
* TODO:
* Channel diagnostic variables and device diag variables
*)

EnO:=En;

EL2819_Error(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

]]></ST>
    </Implementation>
    <LineIds Name="EL2819">
      <LineId Id="113" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="66" Count="10" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>