<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <POU Name="EL5002" Id="{d69b0967-8c1a-4603-8de6-a922d8c7d18e}" SpecialFunc="None">
    <Declaration><![CDATA[//EL5002 | 2-chennel SSI absolute encoder terminal
FUNCTION_BLOCK EL5002

VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
	bError: BOOL;
END_VAR

VAR
	
	wCh1_Status		AT %I*	: BYTE;
	wCH2_Status		AT %I*	: BYTE;
	
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	EL5002_Error 	: FB_TerminalError;
	CH1_Status		: FB_GenericError;
	CH2_Status		: FB_GenericError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
* TODO: Test on hardware
*)

EnO:=En;

//Channel #1 Status 
IF wCh1_Status <> 0 THEN
	CH1_Status.sErrorMessage := 'EL5002 Channel #1: ';
	IF (wCh1_Status AND 16#01) = 1 THEN CONCAT(CH1_Status.sErrorMessage, 'Data Error; ');				CH1_Status.ErrorPriority := 10;			END_IF
	IF (wCh1_Status AND 16#02) = 1 THEN CONCAT(CH1_Status.sErrorMessage, 'Frame Error; ');				CH1_Status.ErrorPriority := 10;			END_IF
	IF (wCh1_Status AND 16#04) = 1 THEN CONCAT(CH1_Status.sErrorMessage, 'Power Failure; ');			CH1_Status.ErrorPriority := 5;			END_IF
	IF (wCh1_Status AND 16#08) = 1 THEN CONCAT(CH1_Status.sErrorMessage, 'Data Mismatch; ');			CH1_Status.ErrorPriority := 10;			END_IF
	IF (wCh1_Status AND 16#10) = 1 THEN CONCAT(CH1_Status.sErrorMessage, 'Sync Error; ');				CH1_Status.ErrorPriority := 10;			END_IF
	CH1_Status.bError := TRUE;
ELSE
	CH1_Status.bError := FALSE;
	CH1_Status.sErrorMessage := '';
END_IF

//Channel #2 Status 
IF wCh2_Status <> 0 THEN
	CH2_Status.sErrorMessage := 'EL5002 Channel #2: ';
	IF (wCh2_Status AND 16#01) = 1 THEN CONCAT(CH2_Status.sErrorMessage, 'Data Error; ');				CH2_Status.ErrorPriority := 10;			END_IF
	IF (wCh2_Status AND 16#02) = 1 THEN CONCAT(CH2_Status.sErrorMessage, 'Frame Error; ');				CH2_Status.ErrorPriority := 10;			END_IF
	IF (wCh2_Status AND 16#04) = 1 THEN CONCAT(CH2_Status.sErrorMessage, 'Power Failure; ');			CH2_Status.ErrorPriority := 5;			END_IF
	IF (wCh2_Status AND 16#08) = 1 THEN CONCAT(CH2_Status.sErrorMessage, 'Data Mismatch; ');			CH2_Status.ErrorPriority := 10;			END_IF
	IF (wCh2_Status AND 16#10) = 1 THEN CONCAT(CH2_Status.sErrorMessage, 'Sync Error; ');				CH2_Status.ErrorPriority := 10;			END_IF
	CH2_Status.bError := TRUE;
ELSE
	CH2_Status.bError := FALSE;
	CH2_Status.sErrorMessage := '';
END_IF

//Error FB instances
CH1_Status (
	En				:= TRUE,
	bError			:= ,
	sErrorMessage	:= ,
	ErrorPriority	:= ,
	iTerminal_ID	:= iTerminal_ID,
	pErrorSystem	:= ErrorSystem,
	EnO				=> ,
);

CH2_Status (
	En				:= TRUE,
	bError			:= ,
	sErrorMessage	:= ,
	ErrorPriority	:= ,
	iTerminal_ID	:= iTerminal_ID,
	pErrorSystem	:= ErrorSystem,
	EnO				=> ,
);

EL5002_Error(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);
]]></ST>
    </Implementation>
    <LineIds Name="EL5002">
      <LineId Id="9" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="34" Count="1" />
      <LineId Id="116" Count="0" />
      <LineId Id="118" Count="6" />
      <LineId Id="129" Count="0" />
      <LineId Id="125" Count="3" />
      <LineId Id="117" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="132" Count="11" />
      <LineId Id="131" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="91" Count="1" />
      <LineId Id="95" Count="7" />
      <LineId Id="105" Count="8" />
      <LineId Id="103" Count="0" />
      <LineId Id="37" Count="7" />
      <LineId Id="33" Count="0" />
      <LineId Id="56" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>