<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="EL5021" Id="{7f517c2d-3257-42d3-9c58-98a243359439}" SpecialFunc="None">
    <Declaration><![CDATA[//EL5021 | 1-channel Sin/Cos encoder
FUNCTION_BLOCK EL5021

VAR_INPUT
	En: BOOL;
	iTerminal_ID : INT;
	ErrorSystem : POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO: BOOL;
	Counter_Value : UDINT;
	Latch_Value : UDINT;
	bError: BOOL;
END_VAR

VAR
	udiCounter_Value AT %I* : UDINT;
	udiLatch_Value AT %I* : UDINT;
	WcState_WcState AT %I*: BOOL;
	InfoData_State AT %I*: UINT;
	
	//FB-s
	EL5021_Error : FB_TerminalError;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
* TODO:
* Channel Status words, control words
*)

EnO:=En;

//Error FB instance
EL5021_Error(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

IF EN THEN
	IF NOT bError THEN
		Counter_Value := udiCounter_Value;
		Latch_Value := udiLatch_Value;
	ELSE
		Counter_Value := 0;
		Latch_Value := 0;
	END_IF
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="EL5021">
      <LineId Id="29" Count="24" />
      <LineId Id="9" Count="0" />
      <LineId Id="54" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>