<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <POU Name="EL5042" Id="{004c6c92-c047-49ba-9e4a-59675e5ea7dd}" SpecialFunc="None">
    <Declaration><![CDATA[//EL5042 | 2-channel BiSS-C absolute encoder terminal
FUNCTION_BLOCK EL5042

VAR_INPUT
	En: BOOL;
	iTerminal_ID	: INT;
	ErrorSystem		: POINTER TO ST_ErrorSystem;
END_VAR

VAR_OUTPUT
	EnO		: BOOL;
	bError	: BOOL;
END_VAR

VAR
	wCh1_Status			AT %I*	: WORD;
	wCh2_Status			AT %I*	: WORD;
	WcState_WcState		AT %I*	: BOOL;
	InfoData_State		AT %I*	: UINT;
	
	//FB-s
	EL5042_Error	: FB_TerminalError;
	Ch1_Status		: FB_GenericError;
	Ch2_Status		: FB_GenericError;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
* TODO: Test on hardware
*)
EnO:=En;

IF (wCh1_Status AND 16#0003) <> 0 THEN
	Ch1_Status.sErrorMessage := 'EL5042 Channel #1: ';
	IF (wCh1_Status AND 16#0001) = 1 THEN CONCAT(Ch1_Status.sErrorMessage, 'BiSS-C Warning; ');				Ch1_Status.ErrorPriority := 10;			END_IF
	IF (wCh1_Status AND 16#0002) = 1 THEN CONCAT(Ch1_Status.sErrorMessage, 'BiSS-C Error; ');				Ch1_Status.ErrorPriority := 10;			END_IF
	Ch1_Status.bError := TRUE;
ELSE
	Ch1_Status.bError := FALSE;
	Ch1_Status.sErrorMessage := '';
END_IF

IF (wCh2_Status AND 16#0003) <> 0 THEN
	Ch2_Status.sErrorMessage := 'EL5042 Channel #2: ';
	IF (wCh2_Status AND 16#0001) = 1 THEN CONCAT(Ch2_Status.sErrorMessage, 'BiSS-C Warning; ');				Ch2_Status.ErrorPriority := 10;			END_IF
	IF (wCh2_Status AND 16#0002) = 1 THEN CONCAT(Ch2_Status.sErrorMessage, 'BiSS-C Error; ');				Ch2_Status.ErrorPriority := 10;			END_IF
	Ch2_Status.bError := TRUE;
ELSE
	Ch2_Status.bError := FALSE;
	Ch2_Status.sErrorMessage := '';
END_IF


//Error FB instances
EL5042_Error(
	En := TRUE,
	iTerminal_ID := iTerminal_ID,
	bWcState := WcState_WcState,
	uiInfoData_State := InfoData_State,
	pErrorSystem := ErrorSystem,
	bError => bError,
);

Ch1_Status (
	En				:= TRUE,
	bError			:= ,
	sErrorMessage	:= ,
	ErrorPriority	:= ,
	iTerminal_ID	:= iTerminal_ID,
	pErrorSystem	:= ErrorSystem,
	EnO				=> ,
);

Ch2_Status (
	En				:= TRUE,
	bError			:= ,
	sErrorMessage	:= ,
	ErrorPriority	:= ,
	iTerminal_ID	:= iTerminal_ID,
	pErrorSystem	:= ErrorSystem,
	EnO				=> ,
);]]></ST>
    </Implementation>
    <LineIds Name="EL5042">
      <LineId Id="29" Count="1" />
      <LineId Id="32" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="103" Count="3" />
      <LineId Id="110" Count="3" />
      <LineId Id="100" Count="0" />
      <LineId Id="114" Count="8" />
      <LineId Id="101" Count="1" />
      <LineId Id="35" Count="9" />
      <LineId Id="80" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="82" Count="6" />
      <LineId Id="81" Count="0" />
      <LineId Id="90" Count="8" />
      <LineId Id="89" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>